--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,40 +5,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.HomeFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:clipToPadding="false"
-        android:fillViewport="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:overScrollMode="never">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageShape"
-                android:layout_width="260dp"
+                android:layout_width="match_parent"
                 android:layout_height="260dp"
+                android:layout_margin="32dp"
                 android:adjustViewBounds="true"
                 android:background="@color/colorTransparent"
-                android:contentDescription="@string/image"
-                android:src="@drawable/ic_pyramid" />
+                android:contentDescription="@string/image" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvShapes"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
                 android:clipToPadding="false"
-                android:overScrollMode="never" />
+                android:overScrollMode="never"
+                android:paddingStart="16dp"
+                android:paddingTop="16dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="100dp" />
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
@@ -49,7 +50,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:fontFamily="@font/medium"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
@@ -61,7 +64,7 @@
         app:cornerRadius="0dp"
         app:icon="@drawable/ic_arrow_right"
         app:iconGravity="textEnd"
-        app:iconPadding="16dp"
+        app:iconPadding="20dp"
         app:iconSize="20dp"
         app:iconTint="@color/colorWhite"
         app:rippleColor="@color/colorWhiteTransparent50" />
