--- a/app/src/main/res/layout/item_shape.xml
+++ b/app/src/main/res/layout/item_shape.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/imageShape"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="60dp"
     android:layout_height="60dp"
-    android:layout_margin="12dp"
-    android:adjustViewBounds="true"
-    android:background="@color/colorTransparent"
-    android:contentDescription="@string/image"
-    app:tint="@color/colorWhite" />
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="32dp">
+
+    <ImageView
+        android:id="@+id/imageShape"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:adjustViewBounds="true"
+        android:background="@color/colorTransparent"
+        android:contentDescription="@string/image" />
+</FrameLayout>
